# projeto_CG

./: .gitignore  CMakeLists.txt  config.xml  fase2.xml  fase3.xml
engine/: engine.cpp
generator/: bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  generator.cpp  plane.cpp  plane.hpp  ring.cpp  ring.hpp  sphere.cpp  sphere.hpp
point/: point.cpp  point.hpp
tinyXML/: tinyxml2.cpp
